spade-tests/src/snapshots/spade_tests__parser__empty_statement_position_comptime_is_error.snap
---
source: spade-tests/src/parser.rs
---
fn a() {
    $if a == 0{
        let _ = 0;
    }
    true
}


error: Expected a to be a compile time value
  ┌─ testinput:2:9
  │  
1 │ ╭ fn a() {
2 │ │     $if a == 0{
  │ │         ^ Expected compile time value
3 │ │         let _ = 0;
4 │ │     }
5 │ │     true
6 │ │ }
  │ ╰─' a is a unit
  │  
  = Expected value
  = Found unit
  = Hint: compile time values can be defined with $config <name> = value


